# aaf

./: CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  window.c
include/: aaf.h  gui.h  gui_button.h  gui_element.h  gui_label.h  gui_text_input.h
include/gui/: gui.h  gui_button.h  gui_label.h  gui_text_input.h
src/: CMakeLists.txt  aaf.c  gui.c  gui_button.c  gui_label.c  gui_text_input.c
src/gui/: gui_button.c  gui_label.c  gui_text_input.c
